# ROPD_official

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_ropd_repro_90m.sh  run_ropd_repro_90m_val.sh  run_ropd_repro_90m_val_clean.sh  run_ropd_repro_90m_val_groundtruth.sh  run_ropd_repro_90m_val_run.sh
algo/: __init__.py  anthropic_env.py  openai_env.py  ropd_artifacts.py  ropd_clients.py  ropd_judge_provider_resolver.py  ropd_pipeline.py  ropd_prompts.py  ropd_scheduler.py  ropd_teacher_index.py
algo/ropd/: __init__.py  client.py  prompts.py  reward_manager.py
data/math/: split_manifest.json  teacher_index_test.jsonl  teacher_index_val.jsonl
docs/: daily_report_2026-07-13.md  ropd_gpu10_experiment_report.md  ropd_multigpu_smoke_test.md  ropd_multigpu_smoke_test_report.md  ropd_multigpu_smoke_test_result.md  ropd_repro_90m_validation_report.md
prompts/: rubricator.txt  verifier.txt
scripts/: benchmark_anthropic_route_latency.py  build_gpt54_teacher_index_overnight.sh  build_opus_teacher_index_100.sh  build_opus_teacher_index_overnight.sh  build_teacher_index.py  filter_parquet_by_teacher_index.py  run_opus_ropd_math100_100steps_4gpu.sh  run_opus_ropd_math10_20steps.sh  run_opus_ropd_math1_10steps_tiny_test.sh  summarize_ropd_intermediates.py  summarize_ropd_run.py
tests/: ray_startup_probe.py
tmp/: gpt54_teacher_index_dapo_math17k_n4.jsonl.failures.jsonl  opus_teacher_index_math100_n4.jsonl  opus_teacher_index_math100_n4.jsonl.failures.jsonl
tools/: build_math_uid_splits.py  build_math_uid_splits_final.py  split_math_by_teacher_uid.py
training/: launch_judge_vllm.sh  run_ropd_pilot_4gpu.sh  train.sh
verl/: __init__.py
verl/experimental/agent_loop/: agent_loop.py
verl/experimental/fully_async_policy/: black_opd_queue.py  black_opd_window_coordinator.py  detach_utils.py  fully_async_main.py  fully_async_rollouter.py  fully_async_trainer.py  param_sync.py  reward_fn_utils.py  ropd_judge_worker.py
verl/single_controller/base/: decorator.py
verl/single_controller/ray/: base.py
verl/trainer/: main_ppo.py
verl/trainer/config/: _generated_ppo_trainer.yaml  judge_providers.yaml  ppo_trainer.yaml  ropd.yaml  ropd_b300_smoke.yaml  ropd_gpu10.yaml  ropd_observe.yaml  ropd_pilot.yaml  ropd_repro_90m.yaml  ropd_repro_90m_val.yaml  ropd_repro_90m_val_groundtruth.yaml  ropd_repro_90m_val_groundtruth_run.yaml  ropd_smoke.yaml  user.yaml
verl/trainer/ppo/: metric_utils.py  ray_trainer.py  reward.py  rollout_corr_helper.py
verl/utils/: attention_utils.py  omegaconf_resolvers.py  ropd_paths.py  tracking.py
verl/utils/dataset/: vision_utils.py
verl/utils/reward_score/: __init__.py  gsm8k.py
verl/utils/reward_score/feedback/: math.py  mcq.py
verl/utils/reward_score/prime_code/: README.md
verl/workers/rollout/: utils.py
verl/workers/rollout/sglang_rollout/: async_sglang_server.py
verl/workers/rollout/vllm_rollout/: vllm_async_server.py  vllm_rollout.py
