# =============================================================================
# ROPD release pyproject
# -----------------------------------------------------------------------------
# Designed for `uv` end-to-end:
#   uv sync --extra math --extra gpu-generic
#   uv run bash training/train.sh
#
# Layout:
#   algo/        ROPD pipeline + judges
#   verl/        vendored verl trainer (Volcano Engine RL)
#   training/    bash launchers (uv-friendly)
# =============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# -----------------------------------------------------------------------------
# Project metadata (PEP 621)
# -----------------------------------------------------------------------------
[project]
name = "ropd"
dynamic = ["version"]
description = "ROPD: On-Policy Distillation pipeline on top of verl"
license = { text = "Apache-2.0" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
    { name = "ROPD authors" },
]

# Core runtime deps for the release (slim, deterministic).
# GPU-side extras (torch / vllm / flash-attn) live under [project.optional-dependencies]
# so plain `uv sync` stays cheap and only the chosen backend gets resolved.
dependencies = [
    "accelerate==1.12.0",
    "anthropic>=0.116,<1",
    "codetiming==1.4.0",
    "datasets==4.4.2",
    "dill==0.4.0",
    "fastapi==0.127.0",
    "hydra-core==1.3.2",
    "latex2sympy2==1.5.4",
    "latex2sympy2_extended==1.10.2",
    "math-verify[antlr4_9_3]==0.8.0",
    "modelscope>=1.30,<2",
    "numpy>=1.26,<2.3",
    "omegaconf==2.3.0",
    "openai>=2.0,<3",
    "packaging==25.0",
    "pandas==2.3.3",
    "peft==0.18.0",
    "psutil==7.1.3",
    "pyarrow==22.0.0",
    "pybind11==3.0.1",
    "pydantic>=2.0,<3",
    "pylatexenc==2.10",
    "python-dotenv==1.2.1",
    "PyYAML==6.0.3",
    "pyzmq==27.1.0",
    "ray[default]==2.53.0",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "swanlab==0.7.14",
    "sympy>=1.13.1,<1.15",
    "tensorboard==2.20.0",
    "tensordict==0.10.0",
    "torchdata==0.11.0",
    "transformers==4.57.1",
    "uvicorn==0.40.0",
    "wandb==0.23.1",
    "word2number==1.1",
]

[project.optional-dependencies]
# Hardware-flavoured extras - pick exactly one of {gpu, gpu-generic, gh200, npu, cuda}.
gpu = [
    "flash-attn==2.8.3",
    "liger-kernel==0.7.0",
]
gpu-generic = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
    "vllm==0.12.0",
    "liger-kernel==0.7.0",
]

# Math-track extras (AIME / DAPO).
math = ["math-verify[antlr4_9_3]==0.8.0"]

# Standalone vllm extra for serving the local judge.
vllm = ["vllm>=0.11.0,<0.13.0"]

# Megatron checkpoint conversion bridge.
mcore = ["mbridge"]

# Optional integrations / contrib.
geo = ["mathruler", "qwen_vl_utils", "torchvision==0.21.0"]
trl = ["trl<=0.9.6"]
transferqueue = ["TransferQueue==0.1.5"]

# Dev / CI.
test = [
    "pytest",
    "pre-commit==4.5.1",
    "py-spy==0.4.1",
    "pytest-asyncio",
    "pytest-rerunfailures",
    "ruff",
]

# -----------------------------------------------------------------------------
# uv configuration
# -----------------------------------------------------------------------------
[tool.uv]
# Aliyun mirror keeps wheel resolution fast in CN regions and is required for
# the pinned cu126 torch / vllm wheels in `gpu-generic`.
find-links = ["https://mirrors.aliyun.com/pytorch-wheels/cu126/"]

# Hardware-extras can't co-exist; let uv reject conflicting combinations early.
conflicts = [
    [{ extra = "gpu" }, { extra = "gpu-generic" }],
    [{ extra = "geo" }, { extra = "vllm" }],
    [{ extra = "geo" }, { extra = "gpu-generic" }],
]

# -----------------------------------------------------------------------------
# setuptools - package discovery
# -----------------------------------------------------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "verl/version/version" }

[tool.setuptools.packages.find]
where = ["."]
include = [
    "algo*",
    "verl*",
]
exclude = [
    "training*",
    "prompts*",
    "tests*",
    "scripts*",
    "checkpoints*",
    "datasets*",
    "models*",
    "outputs*",
    "logs*",
    "wandb*",
    "swanlab*",
]

[tool.setuptools.package-data]
verl = [
    "version/*",
    "trainer/config/*.yaml",
    "trainer/config/*/*.yaml",
    "trainer/*.yaml",
]
algo = [
    "ropd/*.yaml",
    "ropd/*.json",
]

# -----------------------------------------------------------------------------
# Tool configs (lint / typecheck) - kept identical to upstream verl style
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 120

[tool.ruff.lint]
isort = { known-first-party = ["verl", "algo"] }
select = ["E", "F", "UP", "B", "I", "G"]
ignore = [
    "F405", "F403",
    "E731",
    "B007",
    "UP032",
    "G004",
    "UP045",
    "UP035",
]

[tool.mypy]
pretty = true
ignore_missing_imports = true
explicit_package_bases = true
follow_imports = "skip"
ignore_errors = true
